<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.kalemba128.auth.ui.signin.SignInFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/navigateToRegister"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/navigateToMainScreen"
            app:destination="@id/mainScreen" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.kalemba128.auth.ui.signup.SignUpFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/navigateToLogin"
            app:destination="@id/signInFragment" />
        <action
            android:id="@+id/navigateToMainScreen"
            app:destination="@id/mainScreen" />
    </fragment>
    <fragment
        android:id="@+id/mainScreen"
        android:name="com.kalemba128.auth.ui.main.MainFragment"
        android:label="fragment_main_screen"
        tools:layout="@layout/fragment_main_screen" >
        <action
            android:id="@+id/navigateToLoginFromMain"
            app:destination="@id/signInFragment" />
    </fragment>
</navigation>